--- a/poll/static/poll/style.css
+++ b/poll/static/poll/style.css
@@ -1,38 +1,9 @@
-
-body {
-    background: white url("images/background.jpg") no-repeat right bottom ;
-    
-    height: 35%; 
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.container {
-
-    margin-top: 350px;
-    margin-left: 250px;
-    display: block;
-}
-
-.button {
-    background-color: #008CBA; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-left: 20px;
-}
-
-.button:hover {
-    background-color: #DCDCDC;
-    color:black;
-
+body{
+        background: url("images/background.jpg") no-repeat center center fixed;
+        background-size: 100% 100%;
+        height: 100%;
+        position: absolute; 
+        width: 100%;
 }
 .myul{
     list-style-type: none;
@@ -41,11 +12,25 @@ body {
     overflow: hidden;
     background-color: none;
 }
+.bar{
+    margin-left: 250px;
+    margin-top: 10px;
+    size: 50%;
+}
 
 li {
     float: left;
 }
 
+.active{
+    display: block;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    size: 20px;
+    word-wrap: break-word;
+}
 li a {
     display: block;
     color: #008CBA;
@@ -55,7 +40,6 @@ li a {
     size: 20px;
 
 }
-
 li a:hover {
     background-color: #DCDCDC;
     color: black;
@@ -63,23 +47,124 @@ li a:hover {
     text-shadow: rgb(100,239,120);
 }
 
-.bar{
-    margin-left: 180px;
-    margin-top: 30px;
-    size: 50%;
-}
 p {
     font-family: sans-serif;
     font-size: 15px;
     font-style: bold;
 }
-h1 {
-    color: #008CBA;
+.container {
+    margin-top: 0px;
+    margin-left: 300px;
+    display: block;
 }
-.mylist{
-    list-style:  inherit;
+.signup-container {
+    margin-top: 0px;
+    margin-left: 370px;
+    display: block;
+}
+
+/*Just a try*/
+
+input[type=text], input[type=password], input[type=email] {
+    width: 35%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: block;
+    border: none;
+    background: #A9A9A9;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
+hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 25%;
+    opacity: 0.9;
+}
+
+.question-container{
+    margin-top: 0px;
+    margin-left: 300px;
+    display: block;
+}
+.myul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: none;
+}
+button:hover {
+    opacity:1;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    padding: 14px 20px;
+    background-color: #f44336;
+    width: 19%;
+    margin-left: 5px;
+    opacity: 0.5
+}
+.cancelbtn:hover {
+    opacity: 1;
+}
+/* Float cancel and signup buttons and add an equal width */
+ .signupbtn {
+   float: left;
+    padding: 14px 20px;
+    background-color:#4CAF50;
+    width: 20%;
+    opacity: 0.5
+}
+
+.signupbtn:hover {
+    opacity: 1;
+}
+
+/* Add padding to container elements */
+.container {
+    padding: 16px;
+}
+
+/* Clear floats */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+    .cancelbtn, .signupbtn {
+       width: 100%;
+    }
+}
+.choice-container{
+    margin-top: 0px;
+    margin-left: 20px;
+    display: block;
+    padding: 0px;
+}
+.q-container{
+    padding-right: 200px;
+}
+h3.test{
+    word-wrap: break-word;
 
 }
-input {
-    display: block
-}
+
