--- a/poll/templates/poll/detail.html
+++ b/poll/templates/poll/detail.html
@@ -1,8 +1,9 @@
-{% load static %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'poll/style.css' %}" />
+{% extends "poll/base.html" %}
+{% block content %}
 <div class ="container">
-<h3>{{ question.question_text }}</h3>
+<div class="q-container">
+<h3 class="test">{{ question.question_text }}</h3>
+</div>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
@@ -16,3 +17,4 @@
 <input type="submit" value="Vote" />
 </form>
 </div>
+{% endblock %}
