--- a/poll/templates/poll/login.html
+++ b/poll/templates/poll/login.html
@@ -1,7 +1,4 @@
-{% load static %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'poll/style.css' %}" />
-
+{% extends "poll/base.html" %}
 {% block content %}
 <div class='container'>
 <h1>{{title}}</h1>
@@ -9,10 +6,12 @@
 
 <form method='POST' action=''>
     {% csrf_token %}
-    {{form}}
+    {{form.as_p}}
     <br/>
-
-    <input type="submit" class="btn btn-default" value='{{title}}' />
+    <br/>
+	<input type="submit" value="{{title}}" class="signupbtn" />
+    <input type="button" value="Cancel"  class="cancelbtn"/>
+  
 
 </form>
 </div>
