--- a/poll/templates/poll/result.html
+++ b/poll/templates/poll/result.html
@@ -1,15 +1,21 @@
-{% load static %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'poll/style.css' %}" />
+{% extends "poll/base.html" %}
+{% block content %}
 <div class="container">
-<h3>{{ question.question_text }}</h3>
+	<div class="q-container">
+	<h3 class="test">{{ question.question_text }}</h3>
 
-<ul class="mylist">
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %}
-</ul>
 
-<a href="{% url 'poll:detail' question.id %}" style="margin-left: 20px">Vote again?</a>
+<div class="choice-container">
+	<ul class="mylist">
+		{% for choice in question.choice_set.all %}
+    		<li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+    		<br/>
+		{% endfor %}
+	</ul>
+
+	<a href="{% url 'poll:index' %}" style="margin-left: 20px">Back to Poll?</a>
 
 </div>
+</div>
+
+{% endblock content %}
