--- a/poll/templates/poll/signup.html
+++ b/poll/templates/poll/signup.html
@@ -1,18 +1,20 @@
-% load static %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'poll/style.css' %}" />
+{% extends "poll/base.html" %}
 
 {% block content %}
-<div class='container'>
+<div class='signup-container'>
 <h1>{{title}}</h1>
-<br/>
+
 
 <form method='POST' action=''>
     {% csrf_token %}
-    {{form}}
+    {{form.as_p}}
+    
+    <input type="submit" value="{{title}}" class="signupbtn" />
+    <input type="button" value="Cancel"  class="cancelbtn"/>
+    
     <br/>
 
-    <input type="submit" class="btn btn-default" value='{{title}}' />
+    
 
 </form>
 </div>
